--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <button type="button" onclick="search_animal()" style="font-family: 'Open Sans', sans-serif;">Search</button>
       <br><br><br>
       <img src="Flamingo.jpg" alt="flamingo" height="500" id="animal_image">
+      <p style="font-family: 'Open Sans', sans-serif; max-width:80%;" id="animal_info"></p>
+      <br><br>
+      <iframe width="560" height="315" src="" id="youtube_video" title="YouTube video player"
+       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </center>
     <script src="index.js" charset="utf-8"></script>
   </body>
